examples/invalid/20_type_alias_cycle.lane
// Invalid: transparent top-level type aliases must form an acyclic dependency
// graph. Expanding A reaches B, which reaches A again.

type A = B
type B = A

let answer : A = 42
